--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -4,13 +4,13 @@
 
 /*menu*/
 
-.menuHeading{
+.menuHeading {
   position: sticky;
   top: 0;
   z-index: 1;
 }
 
-.menuHeading ul{
+.menuHeading ul {
   list-style: disc;
   @extend %flex-center;
   gap: 2rem;
@@ -20,62 +20,78 @@
   font-size: 1.2rem;
 }
 
-.menuHeading ul a{
+.menuHeading ul a {
   text-decoration: none;
   color: $color2;
 }
 
-.menuHeading ul li::marker{
+.menuHeading ul li::marker {
   color: $color2;
 }
 
-.menuHeading ul :first-child{
+.menuHeading ul :first-child {
   list-style: none;
 }
 
-.menu{
+.menuContainer {
   display: grid;
   grid-template-columns: 1fr;
+  padding: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.cartButton {
+  padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: "Red Hat Text", serif;
+  color: $color2;
+}
+
+.menu {
+  display: grid;
+  grid-template-columns: 100%;
   gap: 1rem;
   margin-bottom: 1rem;
 }
 
-.mainCourses, .drinks, .desserts{
+.mainCourses,
+.drinks,
+.desserts {
   display: grid;
-  grid-template-columns: 
-  repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 1.2rem;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 1rem 2rem;
   justify-items: center;
 }
 
-.menuSection h3{
+.menuSection h3 {
   font-size: 1.2rem;
   margin-top: 1.3rem;
 }
 
-.drinks{
-  grid-template-columns: 
-  repeat(auto-fit, minmax(250px, 1fr));
+.drinks {
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.foodItems{
+.foodItems {
   background-color: $color2;
   display: grid;
   position: relative;
   padding-bottom: 1rem;
   border-radius: 18px;
   box-shadow: 1px 1px 3px $color2;
+  margin: 1rem;
 }
 
-.foodItems img{
+.foodItems img {
   position: relative;
   width: 100%;
   max-height: 250px;
   border-radius: 15px 15px 0 0;
 }
 
-.details{
+.details {
   padding: 1.3rem 0.6rem;
   display: grid;
   grid-template-rows: auto 1fr 5px;
@@ -83,24 +99,24 @@
   padding-bottom: 2rem;
 }
 
-.detailsSub{
+.detailsSub {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-around;
 }
 
-.detailsSub h5{
+.detailsSub h5 {
   font-weight: 600;
   font-size: 1.2rem;
   font-family: "Playwrite GB S";
 }
 
-.details p{
+.details p {
   color: $color3;
   font-size: 1rem;
 }
 
-.details button{
+.details button {
   background-color: $color1;
   color: $color3;
   border: none;
@@ -113,10 +129,9 @@
   margin: auto;
 }
 
-:hover.details button{
+:hover.details button {
   background-color: $color3;
   color: $color2;
   transform: scale(1.2);
   transition: all 0.5s ease-out;
 }
-
