--- a/sass/layout/_titles.scss
+++ b/sass/layout/_titles.scss
@@ -23,7 +23,7 @@
 }
 
 %h4 {
-  font-family: "Playwrite GB S";
+  font-family: "Playwrite GB S", serif;
   text-shadow: 1px 1px 2px $color1;
   font-size: 1.4rem;
   margin-top: 2rem;
