--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,8 @@
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -77,7 +78,8 @@
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -189,7 +191,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -231,7 +234,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -345,7 +349,8 @@ footer {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -407,7 +412,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -449,7 +455,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -542,7 +549,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -584,7 +592,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -666,7 +675,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -708,7 +718,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -799,7 +810,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -841,7 +853,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -895,18 +908,35 @@ h3 {
   list-style: none;
 }
 
-.menu {
+.menuContainer {
   display: grid;
   grid-template-columns: 1fr;
+  padding: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.cartButton {
+  padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: "Red Hat Text", serif;
+  color: #d6c7a7;
+}
+
+.menu {
+  display: grid;
+  grid-template-columns: 100%;
   gap: 1rem;
   margin-bottom: 1rem;
 }
 
-.mainCourses, .drinks, .desserts {
+.mainCourses,
+.drinks,
+.desserts {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 1.2rem;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 1rem 2rem;
   justify-items: center;
 }
 
@@ -926,6 +956,7 @@ h3 {
   padding-bottom: 1rem;
   border-radius: 18px;
   box-shadow: 1px 1px 3px #d6c7a7;
+  margin: 1rem;
 }
 
 .foodItems img {
@@ -1017,7 +1048,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1059,7 +1091,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1149,7 +1182,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1191,7 +1225,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1271,7 +1306,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1313,7 +1349,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1458,7 +1495,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1500,7 +1538,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
@@ -1528,25 +1567,34 @@ h3 {
 /*About us*/
 .aboutUsContainer {
   min-height: 35rem;
-  padding: 1rem;
+}
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
+  margin: 2rem;
+}
+.aboutUsContainer p {
+  margin: 0;
 }
 
 .aboutUsContainer img {
-  max-width: 270px;
-  min-width: 100px;
-  height: auto;
+  width: 100%;
 }
 
-.aboutUsContainer .text1, .text2 {
-  max-width: 350px;
-  min-width: 100px;
-  height: auto;
+.aboutUsWoman,
+.aboutUsMan {
+  max-width: 400px;
+  min-height: 1000px;
+  max-height: 1400px;
 }
 
-.aboutUsContainer img, .text1, .text2 {
+.aboutUsWoman,
+.aboutUsMan,
+#imgWoman,
+#imgMan,
+.text1,
+.text2 {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #261808;
-  margin: 1rem;
 }
 
 .nav-item, .footerContainer, .principles, .reviewSection, .locationReservation, .menuHeading ul, .eventsInfo, .blogContainer .nav-tabs, .aboutUsContainer {
@@ -1586,7 +1634,8 @@ h3 {
   font-weight: bold;
 }
 
-.aboutUsContainer .text1, .text2 {
+.aboutUsContainer .aboutUsWoman,
+.aboutUsContainer .aboutUsMan {
   background-color: #261808;
   color: #d6c7a7;
 }
